Remove JobMonitorServiceProvider and QueueTrackingServiceProvider files

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         "illuminate/database": "^9.0|^10.0",
         "illuminate/queue": "^9.0|^10.0",
         "illuminate/console": "^9.0|^10.0",
-        "illuminate/notifications": "^9.0|^10.0",
-        "custplace/laravel-job-monitor": "dev-master"
+        "illuminate/notifications": "^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
